manifests/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  template:
    spec:
      nodeSelector:
        environment: cccssront01
      tolerations:
        - key: 'cccssront01'
          operator: 'Equal'
          value: 'true'
          effect: 'NoSchedule'
