manifests/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - ssr-o.azure.amsterdam.nl
      secretName: certificate
